Migrate common consumer props (#1525)
* Migrate consumer wokload properties

* Migrate consumer wokload properties

* Fixed integrationTest

* Migrated maxrate config, fixed integrationTest

* Fixed ci

* Fixed ci

* Code review

* Code review

* Migrated common consumer configs

* Code review fixes